front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
  namespace: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - image: 10.235.9.36:30002/library/front:latest
          imagePullPolicy: Always
          name: front
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            # - name: front
            # mountPath: /usr/share/nginx/html
            # - name: nginx-default-conf
              # mountPath: /etc/nginx/conf.d/default.conf
              # subPath: default.conf
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
      #  - name: front
       #   persistentVolumeClaim:
        #    claimName: front-glusterfs-pvc
        # - name: nginx-default-conf
          # configMap:
            # name: front-configmap
            # items:
            # - key: default.conf
              # path: default.conf
        - name: nginx-conf
          configMap:
            name: front-configmap
            items:
            - key: nginx.conf
              path: nginx.conf
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      nodeSelector:
        node-role.kubernetes.io/edge: worker
      tolerations:
        - key: "node-role.kubernetes.io/edge"
          operator: "Exists"
          effect: "NoSchedule"
