front/front-pvc-pv.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-front
  namespace: front
subsets:
- addresses:
  - ip: 10.235.9.42
  - ip: 10.235.9.43
  - ip: 10.235.9.44
  ports:
  - port: 49163
    protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: glusterfs-front
  namespace: front
spec:
  ports:
    - port: 49163
