front/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front
  name: front
  namespace: front
spec:
  type: ClusterIP
  # type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30014
  selector:
    app: front
